edition = "2023";

package xtdb.block.proto;

option java_multiple_files = true;

message TableBlock {
  bytes arrow_schema = 1;
  int64 row_count = 2;
}

message Block {
  int64 latest_completed_tx_id = 1;
  repeated string table_blocks = 2;
}